build/log/idf_py_stdout_output_17080
[1/9] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D A:\Eelectronics\TLC-SIM_v2\build\bootloader\esp-idf\esptool_py && C:\Users\alikhaledahmed\.espressif\python_env\idf5.4_py3.11_env\Scripts\python.exe C:/Users/tlcadmin/esp/v5.4/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 A:/Eelectronics/TLC-SIM_v2/build/bootloader/bootloader.bin"
Bootloader binary size 0x6560 bytes. 0xaa0 bytes (9%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/rotary_encoder_module.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/rotary_encoder_module.c.obj 
ccache C:\Users\alikhaledahmed\.espressif\tools\xtensa-esp-elf\esp-14.2.0_20241119\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.4\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IA:/Eelectronics/TLC-SIM_v2/build/config -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/newlib/platform_include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/freertos/config/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/freertos/config/include/freertos -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/freertos/config/xtensa/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/freertos/esp_additions/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/esp_hw_support/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/esp_hw_support/include/soc -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/esp_hw_support/include/soc/esp32 -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/esp_hw_support/dma/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/esp_hw_support/ldo/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/esp_hw_support/debug_probe/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/esp_hw_support/port/esp32/. -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/esp_hw_support/port/esp32/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/heap/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/heap/tlsf -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/log/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/soc/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/soc/esp32 -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/soc/esp32/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/soc/esp32/register -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/hal/platform_port/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/hal/esp32/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/hal/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/esp_rom/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/esp_rom/esp32/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/esp_rom/esp32/include/esp32 -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/esp_rom/esp32 -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/esp_common/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/esp_system/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/esp_system/port/soc -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/esp_system/port/include/private -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/xtensa/esp32/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/xtensa/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/xtensa/deprecated_include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/lwip/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/lwip/include/apps -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/lwip/include/apps/sntp -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/lwip/lwip/src/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/lwip/port/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/lwip/port/freertos/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/lwip/port/esp32xx/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/spi_flash/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/driver/deprecated -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/driver/i2c/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/driver/touch_sensor/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/driver/twai/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/driver/touch_sensor/esp32/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/esp_pm/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/esp_ringbuf/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/esp_driver_gpio/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/esp_driver_pcnt/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/esp_driver_gptimer/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/esp_driver_spi/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/esp_driver_mcpwm/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/esp_driver_ana_cmpr/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/esp_driver_i2s/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/esp_driver_sdmmc/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/sdmmc/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/esp_driver_sdspi/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/esp_driver_sdio/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/esp_driver_dac/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/esp_driver_rmt/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/esp_driver_tsens/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/esp_driver_sdm/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/esp_driver_i2c/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/esp_driver_uart/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/vfs/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/esp_driver_ledc/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/esp_driver_parlio/include -IC:/Users/tlcadmin/esp/v5.4/esp-idf/components/esp_driver_usb_serial_jtag/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=A:/Eelectronics/TLC-SIM_v2=. -fmacro-prefix-map=C:/Users/tlcadmin/esp/v5.4/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/rotary_encoder_module.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\rotary_encoder_module.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/rotary_encoder_module.c.obj -c A:/Eelectronics/TLC-SIM_v2/main/rotary_encoder_module.c
In file included from A:/Eelectronics/TLC-SIM_v2/main/rotary_encoder_module.c:3:
C:/Users/tlcadmin/esp/v5.4/esp-idf/components/driver/deprecated/driver/timer.h:16:2: warning: #warning "legacy timer group driver is deprecated, please migrate to driver/gptimer.h" [-Wcpp]
   16 | #warning "legacy timer group driver is deprecated, please migrate to driver/gptimer.h"
      |  ^~~~~~~
A:/Eelectronics/TLC-SIM_v2/main/rotary_encoder_module.c: In function 'timer_isr':
A:/Eelectronics/TLC-SIM_v2/main/rotary_encoder_module.c:46:5: error: 'TIMERG0' undeclared (first use in this function); did you mean 'TIMER_0'?
   46 |     TIMERG0.int_clr_timers.t0 = 1;
      |     ^~~~~~~
      |     TIMER_0
A:/Eelectronics/TLC-SIM_v2/main/rotary_encoder_module.c:46:5: note: each undeclared identifier is reported only once for each function it appears in
ninja: build stopped: subcommand failed.
